# Root tooling configuration for Melkor. The native build is driven by CMakeLists.txt.
#
# This file is NOT yet an installable Python package: it declares no [project] and no
# [build-system] table, so nothing here is pip-installable. That gap is release blocker
# P0-02 — the GitHub description used to claim "Python/C++" with no distribution behind it.
# Work package 16 turns this into a real PEP 517 project that builds the melkor3d wheel from
# the same native core. Until then, no Melkor documentation or metadata may claim Python
# support.

[tool.ruff]
line-length = 100
extend-exclude = [
    # Vendored third-party code is never Melkor's to lint.
    "third_party",
]

[tool.ruff.lint]
# High-signal rules only: pyflakes (F) catches real bugs (unused imports,
# undefined names, dead f-strings, unused locals) and bugbear (B) catches
# common footguns (mutable default args, bare except, etc.). Stylistic and
# typing-modernization rules (E/W/I/UP) are intentionally left out of CI so
# the lint gate tracks correctness rather than formatting churn.
select = ["F", "B"]
ignore = []
