[package]
name = "melkor-viewer"
version = "2.0.0-dev"
description = "Desktop Gaussian-splat viewer for Melkor"
authors = ["Sepehr Mahmoudian"]
license = "MIT"
repository = "https://github.com/sepahead/melkor"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
